packages/components/button/button-group.scss
@use '../core/styles/common/groups-mixins';

.kbq-button-group {
    &.kbq-button-group_horizontal {
        @include groups-mixins.group(':is(.kbq-button, .kbq-button-icon)');
    }

    &.kbq-button-group_vertical {
        @include groups-mixins.vertical-group(':is(.kbq-button, .kbq-button-icon)');
    }

    &:not(:has(> :not(.kbq-contrast-fade.kbq-button_filled))),
    &:not(:has(> :not(.kbq-contrast.kbq-button_filled))) {
        // @TODO tech debt (#DS-4847)
        gap: var(--kbq-size-3xs);
    }
}

